added in tailwind functionality, caching on the web browser is stopping auto updates unfortunately

--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/output.css') }}">
 </head>
 <body>
-    <h1>Welcome to the Home Page! Your home.html was served</h1>
+    <h1 class="text-red-500 text-5xl font-bold">Welcome to the Home Page! Your home.html was served</h1>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 </html>
