--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1 class="text-red-500 text-5xl font-bold">Welcome to the Home Page! Your home.html was served</h1>
+    <button class="btn btn-primary">Click me</button>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 </html>
