--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -3,7 +3,21 @@
 {% block title %}Home Page{% endblock %}
 
 {% block content %}
-    <h1 class="text-red-500 text-5xl font-bold">Welcome to the Home Page! Your home.html was served</h1>
-    <button class="btn btn-primary">Click me</button>
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+
+    {% include 'components/navbar.html' %}
+    
+    <div class="hero min-h-screen" style="background-image: url(https://daisyui.com/images/stock/photo-1507358522600-9f71e620c44e.jpg);">
+        <div class="hero-overlay bg-opacity-60"></div>
+        <div class="hero-content text-center text-neutral-content">
+          <div class="max-w-md">
+            <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
+            <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+            <button class="btn btn-primary">Get Started</button>
+          </div>
+        </div>
+    </div>
+
+    {% include 'components/footer.html' %}
+
+    
 {% endblock %}
